update promotion responsive

--- a/index.html
+++ b/index.html
@@ -128,10 +128,16 @@
             <!-- 추천 이벤트  -->
             <section class="promotion">
                 <div class="inner">
+                    <div class="section-top">
+                        <h2>오늘의 픽</h2>
+                        <p>인터파크에서 할인혜택을 꼭 챙기세요.</p>
+                    </div>
+
                     <div class="promotion-slide">
                         <button class="sw-bt sw-prev">이전</button>
                         <button class="sw-bt sw-next">다음</button>
 
+                        <!-- promotion Swiper -->
                         <div class="swiper sw-promotion">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
@@ -156,13 +162,18 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- pagination -->
+                        <div class="sw-promotion-control">
+                            <div class="pagination sw-promotion-pg"></div>
+                        </div>
                     </div>
                 </div>
             </section>
             <!-- Initialize Swiper -->
             <script>
                 var swiper = new Swiper(".sw-promotion", {
-                    slidesPerView: 2,
+                    slidesPerView: 1,
                     spaceBetween: 24,
                     speed: 1000,
                     loop: true,
@@ -170,10 +181,18 @@
                         delay: 2500,
                         disableOnInteraction: false,
                     },
-
                     navigation: {
                         nextEl: ".promotion .sw-next",
                         prevEl: ".promotion .sw-prev",
+                    },
+                    pagination: {
+                        el: ".sw-promotion-pg",
+                        clickable: true,
+                    },
+                    breakpoints: {
+                        760: {
+                            slidesPerView: 2,
+                        },
                     },
                 });
             </script>
