--- a/index.html
+++ b/index.html
@@ -486,12 +486,99 @@
                                         </div>
                                     </a>
                                 </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="tour-link">
+                                        <div class="tour-img">
+                                            <img src="images/tour1.jpg" alt="toru" />
+                                        </div>
+                                        <div class="tour-info">
+                                            <ul class="tour-info-list">
+                                                <li><span class="tour-cate">반짝특가</span></li>
+                                                <li>
+                                                    <span class="tour-title">[미동부/캐나다 10일] 밤 출발 에어프레미아 10일 [퀘벡숙박/3대야경/보스턴]</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-place">웨스틴 리조트 괌</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-price"><b>350,300</b>원~</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="tour-link">
+                                        <div class="tour-img">
+                                            <img src="images/tour2.jpg" alt="toru" />
+                                        </div>
+                                        <div class="tour-info">
+                                            <ul class="tour-info-list">
+                                                <li><span class="tour-cate">반짝특가</span></li>
+                                                <li>
+                                                    <span class="tour-title">[미동부/캐나다 10일] 밤 출발 에어프레미아 10일 [퀘벡숙박/3대야경/보스턴]</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-place">웨스틴 리조트 괌</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-price"><b>350,300</b>원~</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </a>
+                                </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="tour-link">
+                                        <div class="tour-img">
+                                            <img src="images/tour3.jpg" alt="toru" />
+                                        </div>
+                                        <div class="tour-info">
+                                            <ul class="tour-info-list">
+                                                <li><span class="tour-cate">반짝특가</span></li>
+                                                <li>
+                                                    <span class="tour-title">[미동부/캐나다 10일] 밤 출발 에어프레미아 10일 [퀘벡숙박/3대야경/보스턴]</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-place">웨스틴 리조트 괌</span>
+                                                </li>
+                                                <li>
+                                                    <span class="tour-price"><b>350,300</b>원~</span>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <script>
                             new Swiper(".sw-tour", {
                                 slidesPerView: 3,
-                                spaceBetween: 24,
+                                grid: {
+                                    rows: 2,
+                                    fill: "row",
+                                },
+                                spaceBetween: 10,
+                                breakpoints: {
+                                    1024: {
+                                        spaceBetween: 32,
+                                        slidesPerView: 2,
+                                        // 화면당 2개씩 슬라이드 이동
+                                        slidesPerGroup: 2,
+                                        grid: {
+                                            rows: 1,
+                                        },
+                                    },
+                                    1280: {
+                                        spaceBetween: 26,
+                                        slidesPerView: 3,
+                                        // 화면당 4개씩 슬라이드 이동
+                                        slidesPerGroup: 3,
+                                        grid: {
+                                            rows: 1,
+                                        },
+                                    },
+                                },
                             });
                         </script>
                     </div>
@@ -613,12 +700,44 @@
                                         </div>
                                     </a>
                                 </div>
+                                <div class="swiper-slide">
+                                    <a href="#" class="ticket-link">
+                                        <div class="ticket-img">
+                                            <img src="images/musical1.gif" alt="티켓" />
+                                            <span class="ticket-rank">1</span>
+                                        </div>
+                                        <div class="ticket-info">
+                                            <ul class="ticket-info-list">
+                                                <li>
+                                                    <span class="ticket-title"><b>뮤지컬〈영웅〉- 블루스퀘어</b></span>
+                                                </li>
+                                                <li>
+                                                    <span class="ticket-hall">블루스퀘어 신한카드홀</span>
+                                                </li>
+                                                <li>
+                                                    <span class="ticket-date">2023.03.17 ~ 2023.05.21</span>
+                                                </li>
+                                                <li><span class="ticket-sale">단독판매</span></li>
+                                            </ul>
+                                        </div>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                         <script>
                             new Swiper(".sw-ticket", {
-                                slidesPerView: 4,
-                                spaceBetween: 24,
+                                slidesPerView: 5,
+                                spaceBetween: 10,
+                                breakpoints: {
+                                    1024: {
+                                        slidesPerView: 3,
+                                        spaceBetween: 32,
+                                    },
+                                    1280: {
+                                        slidesPerView: 4,
+                                        spaceBetween: 27,
+                                    },
+                                },
                             });
                         </script>
                     </div>
