--- a/index.html
+++ b/index.html
@@ -1092,8 +1092,14 @@
 
                         <script>
                             new Swiper(".sw-events", {
-                                slidesPerView: 4,
+                                slidesPerView: 3,
                                 spaceBetween: 27,
+                                breakpoints: {
+                                    1280: {
+                                        slidesPerView: 4,
+                                        spaceBetween: 27,
+                                    },
+                                },
                             });
                         </script>
                     </div>
