--- a/index.html
+++ b/index.html
@@ -1030,19 +1030,19 @@
                                 breakpoints: {
                                     1024: {
                                         slidesPerView: 3,
+                                        slidesPerGroup: 3,
+                                        spaceBetween: 30,
                                         grid: {
                                             rows: 1,
                                         },
-                                        slidesPerGroup: 3,
-                                        spaceBetween: 30,
                                     },
                                     1280: {
                                         slidesPerView: 5,
+                                        slidesPerGroup: 5,
+                                        spaceBetween: 27,
                                         grid: {
                                             rows: 1,
                                         },
-                                        slidesPerGroup: 5,
-                                        spaceBetween: 27,
                                     },
                                 },
                             });
@@ -1097,7 +1097,6 @@
                                 breakpoints: {
                                     1280: {
                                         slidesPerView: 4,
-                                        spaceBetween: 27,
                                     },
                                 },
                             });
@@ -1154,7 +1153,6 @@
                         </ul>
                     </div>
                 </div>
-
                 <div class="footer-main">
                     <div class="inner clearfix">
                         <div class="footer-main-left clearfix">
@@ -1227,6 +1225,25 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                </div>
+                <div class="footer-mobile">
+                    <div class="inner">
+                        <div class="footer-mobile-menu">
+                            <a href="#" class="a-line">이용약관</a>
+                            <a href="#" class="a-line"><strong>개인정보 처리방침</strong></a>
+                            <a href="#" class="a-lne">위치기반서비스 이용약관</a>
+                            <br />
+                            <a href="#" class="a-line">분쟁해결기준</a>
+                            <a href="#" class="a-line">이용약관</a>
+                            <a href="#" class="a-line">여행자 보험 가입안내</a>
+                            <a href="#" class="a-more">공지사항</a>
+                        </div>
+                        <div class="footer-mobile-info">
+                            <a href="#" class="a-more a-line"><strong>(주)인터파크</strong> 사업자정보</a>
+                            <a href="#" class="a-more"><strong>(주)인터파크커머스</strong> 사업자정보</a>
+                        </div>
+                        <div class="footer-mobile-desc">(주)인터파크는 인터파크티켓, 인터파크투어의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크는 일체 책임을 지지 않습니다. (주)인터파크커머스는 인터파크쇼핑, 인터파크도서의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크커머스는 일체 책임을 지지 않습니다.</div>
                     </div>
                 </div>
             </footer>
