--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1, user-scalable=no" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
     <!-- favicon -->
     <link rel="icon" href="images/interpark.ico" />
     <!-- 바탕화면 즐겨찾기 -->
@@ -18,10 +21,19 @@
     <title>인터파크</title>
 
     <!-- SEO 적용 -->
-    <meta name="description" content="국내외 항공권, 숙소, 여행 최저가 예약부터 뮤지컬, 콘서트, 연극 티켓까지 모두 한번에 예약하세요" />
-    <meta name="keywords" content="항공권,호텔,리조트,펜션,숙박,비행기표,비행기예약,패키지여행,호텔예약,최저가,뮤지컬,연극,콘서트,티켓,여행,전시,레저,티켓팅" />
+    <meta
+      name="description"
+      content="국내외 항공권, 숙소, 여행 최저가 예약부터 뮤지컬, 콘서트, 연극 티켓까지 모두 한번에 예약하세요"
+    />
+    <meta
+      name="keywords"
+      content="항공권,호텔,리조트,펜션,숙박,비행기표,비행기예약,패키지여행,호텔예약,최저가,뮤지컬,연극,콘서트,티켓,여행,전시,레저,티켓팅"
+    />
     <meta property="og:title" content="인터파크" />
-    <meta property="og:description" content="항공권,호텔,리조트,펜션,숙박,비행기표,비행기예약,패키지여행,호텔예약,최저가,뮤지컬,연극,콘서트,티켓,여행,전시,레저,티켓팅" />
+    <meta
+      property="og:description"
+      content="항공권,호텔,리조트,펜션,숙박,비행기표,비행기예약,패키지여행,호텔예약,최저가,뮤지컬,연극,콘서트,티켓,여행,전시,레저,티켓팅"
+    />
     <meta property="og:image" content="" />
     <meta property="og:url" content="https://www.interpark.com" />
     <meta property="og:site_name" content="인터파크" />
@@ -47,16 +59,20 @@
     <link rel="stylesheet" href="css/style.css" />
     <!-- js 파일로딩 -->
     <script src="js/index.js"></script>
+    <script src="js/promotion.js"></script>
     <script src="js/shopping.js"></script>
     <script src="js/tour.js"></script>
     <script src="js/ticket.js"></script>
     <script src="js/live.js"></script>
     <script src="js/books.js"></script>
+    <script src="js/events.js"></script>
   </head>
   <body>
     <!-- 클론코드 안내창 -->
     <div class="modal">
-      <div class="modal-cont">클론코드 저작권 안내 및 스터디 내용, 깃주소, Notion 주소, 이메일 주소</div>
+      <div class="modal-cont">
+        클론코드 저작권 안내 및 스터디 내용, 깃주소, Notion 주소, 이메일 주소
+      </div>
     </div>
     <!-- 플라잉 배너 -->
     <div class="fix-banner">
@@ -104,7 +120,12 @@
             <div class="header-left">
               <a href="index.html" alt="인터파크" class="logo"></a>
               <form class="search">
-                <input type="text" class="search-text" maxlength="255" placeholder="검색어를 입력해주세요." />
+                <input
+                  type="text"
+                  class="search-text"
+                  maxlength="255"
+                  placeholder="검색어를 입력해주세요."
+                />
                 <input type="button" class="search-bt" />
                 <input type="reset" class="search-reset" />
               </form>
@@ -318,7 +339,10 @@
             <h2>오늘의 도서</h2>
             <p>지금 읽기 딱 좋은 책, 놓치지 마세요!</p>
             <div class="btns">
-              <!-- books.js 이동 -->
+              <a href="#">MD's Pick</a>
+              <a href="#">베스트셀러</a>
+              <a href="#">신간추천</a>
+              <a href="#">특가할인</a>
             </div>
           </div>
           <div class="section-slide">
@@ -416,12 +440,16 @@
                   <span class="f-line">서울시 강남구 삼성로 512 삼성동빌딩 10층</span>
                   <span class="f-line">호스팅서비스제공자 (주)인터파크</span>
                   대표이사 최휘영<br />
-                  <span class="f-line">사업자등록번호 824-81-02515 <a href="#" class="line">사업자정보확인</a></span>
+                  <span class="f-line"
+                    >사업자등록번호 824-81-02515 <a href="#" class="line">사업자정보확인</a></span
+                  >
                   <span>통신판매업신고 2022-서울강남-02179</span><br />
                   <span>관광사업증 등록번호 : 제2014-42호</span>
                 </li>
                 <li>
-                  <span class="f-line"><b>고객센터</b> <a href="#" class="line">투어1:1문의</a></span>
+                  <span class="f-line"
+                    ><b>고객센터</b> <a href="#" class="line">투어1:1문의</a></span
+                  >
                   <span><a href="#" class="line">티켓1:1문의</a></span> <br />
                   <span class="f-line">투어 1588-3443</span>
                   <span class="f-line">티켓 1544-1555</span>
@@ -440,7 +468,11 @@
                   <span>개인정보보호책임자 <a href="#">cpo@interpark.com</a></span>
                 </li>
                 <li>
-                  <p>(주)인터파크는 인터파크티켓, 인터파크투어의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크는 일체 책임을 지지 않습니다.</p>
+                  <p>
+                    (주)인터파크는 인터파크티켓, 인터파크투어의 통신판매중개자로서 통신판매의
+                    당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사
+                    인터파크는 일체 책임을 지지 않습니다.
+                  </p>
                   <span class="copy">Copyright ⓒ INTERPARK Co.,Ltd. All Rights Reserved.</span>
                 </li>
               </ul>
@@ -452,11 +484,16 @@
                   <span>서울시 서초구 강남대로 447(서초동, 남서울빌딩)</span><br />
                   <span class="f-line">호스팅서비스제공자 (주)인터파크커머스</span>
                   <span>대표이사 김양선</span><br />
-                  <span class="f-line">사업자 등록번호 : 422-81-03185 <a href="#" class="line">사업자정보확인</a></span>
+                  <span class="f-line"
+                    >사업자 등록번호 : 422-81-03185
+                    <a href="#" class="line">사업자정보확인</a></span
+                  >
                   <span>통신판매업신고 2023-서울서초-0823</span>
                 </li>
                 <li>
-                  <span class="f-line"><b>고객센터</b> <a href="#" class="line">쇼핑1:1문의</a></span>
+                  <span class="f-line"
+                    ><b>고객센터</b> <a href="#" class="line">쇼핑1:1문의</a></span
+                  >
                   <span><a href="#" class="line">도서1:1문의</a></span> <br />
                   <span class="f-line">쇼핑 1588-1005</span>
                   <span class="f-line">도서 1577-2555</span>
@@ -473,8 +510,14 @@
                   <span>개인정보보호책임자 <a href="#">cpo@interpark.com</a></span>
                 </li>
                 <li>
-                  <p>(주)인터파크커머스는 인터파크쇼핑, 인터파크도서의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크커머스는 일체 책임을 지지 않습니다.</p>
-                  <span class="copy">Copyright ⓒ INTERPARKCormmerce Co.,Ltd. All Rights Reserved.</span>
+                  <p>
+                    (주)인터파크커머스는 인터파크쇼핑, 인터파크도서의 통신판매중개자로서 통신판매의
+                    당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사
+                    인터파크커머스는 일체 책임을 지지 않습니다.
+                  </p>
+                  <span class="copy"
+                    >Copyright ⓒ INTERPARKCormmerce Co.,Ltd. All Rights Reserved.</span
+                  >
                 </li>
               </ul>
             </div>
@@ -498,7 +541,13 @@
               <a href="#" class="a-line a-more"><strong>(주)인터파크 사업자정보</strong></a>
               <a href="#" class="a-more"><strong>(주)인터파크커머스</strong></a>
             </div>
-            <div class="footer-mobile-desc">(주)인터파크는 인터파크티켓, 인터파크투어의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크는 일체 책임을 지지 않습니다. (주)인터파크커머스는 인터파크쇼핑, 인터파크도서의 통신판매중개자로서 통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크커머스는 일체 책임을 지지 않습니다.</div>
+            <div class="footer-mobile-desc">
+              (주)인터파크는 인터파크티켓, 인터파크투어의 통신판매중개자로서 통신판매의 당사자가
+              아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사 인터파크는 일체 책임을
+              지지 않습니다. (주)인터파크커머스는 인터파크쇼핑, 인터파크도서의 통신판매중개자로서
+              통신판매의 당사자가 아니므로, 개별 판매자가 등록한 오픈마켓 상품에 대해서 주식회사
+              인터파크커머스는 일체 책임을 지지 않습니다.
+            </div>
           </div>
         </div>
       </footer>
